# mostly-a-Flipper-T-EMBED-

./: README.md  build.sh  buildAndFlash_Cardputer_ADV.sh  buildAndFlash_Waveshare_c6_1.47.sh  buildAndFlash_Waveshare_c6_1.9.sh  filesystem.html  interface.html  sdkconfig.defaults  sdkconfig.defaults.waveshare_c6_1.47
.github/workflows/: build.yml
applications/main/: application.fam
applications_user/nRF24_jammer/: nRF24_jammer.c
applications_user/weather_station/: weather_station_app.c  weather_station_app_i.c
buddy_firmware/: CMakeLists.txt  README.md  build.sh  sdkconfig.defaults
buddy_firmware/main/: CMakeLists.txt  buddy_config.h  buddy_espnow.c  buddy_espnow.h  buddy_features.c  buddy_features.h  buddy_hs_parser.c  buddy_hs_parser.h  buddy_hs_store.c  buddy_hs_store.h  buddy_main.c  buddy_node.c  buddy_node.h  buddy_protocol.h  buddy_store.c  buddy_store.h
buddy_firmware/main/features/: feat_capture_hs.c  feat_identify.c
build_cardputer_adv/: app-flash_args  cmake_install.cmake  config.env  flash_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json
build_cardputer_adv/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
build_cardputer_adv/esp-idf/: cmake_install.cmake
build_cardputer_adv/gdbinit/: gdbinit  symbols
build_cardputer_adv/log/: idf_py_stderr_output_13241  idf_py_stderr_output_13686  idf_py_stdout_output_13241  idf_py_stdout_output_13686  idf_py_stdout_output_26432
components/assets/: assets_icons.c  assets_icons.h
components/ble_serial/: CMakeLists.txt  ble_serial.c
components/desktop/: desktop.c
components/furi_ble/: gap.h
components/furi_hal/: furi_hal.c  furi_hal_adc.h  furi_hal_bq25896.c  furi_hal_bq27220.c  furi_hal_bt.c  furi_hal_bt.h  furi_hal_display.c  furi_hal_i2c.h  furi_hal_infrared.c  furi_hal_light.c  furi_hal_nfc.h  furi_hal_power.c  furi_hal_pwm.h  furi_hal_random.h  furi_hal_resources.c  furi_hal_resources.h  furi_hal_rtc.c  furi_hal_sd.c  furi_hal_sd.h  furi_hal_serial_types.h  furi_hal_speaker.c  furi_hal_speaker.h  furi_hal_spi.c  furi_hal_spi_types.h  furi_hal_touch.c  furi_hal_usb.c  furi_hal_usb_cdc.c  furi_hal_usb_hid_tinyusb.c  furi_hal_usb_msc.c  furi_hal_usb_msc.h  furi_hal_usb_tinyusb_composite.c  furi_hal_usb_tinyusb_composite.h  furi_hal_version.c
components/gui/: elements.c  view.c  view.h  view_i.h  view_port.c
components/input/: input.h
components/loader/: loader.c  loader_applications.c  loader_i.h  loader_menu.c
components/mjs/: CMakeLists.txt
components/music_worker/: CMakeLists.txt
components/nfc/: nfc.c  nfc_poller.c
components/subghz/: CMakeLists.txt
main/: CMakeLists.txt  app_main.c  main.lf
tests/: test_invariant_feat_capture_hs.c
tools/: add_symbol.py  fap.ld  fap_manifest.py  flash_linux.sh  flash_windows.bat  gen_api_table.py
(+505 files in other folders)
